# aoc2018

./: .gitignore  CMakeLists.txt  README.md  settings.h
01/: .editorconfig  CMakeLists.txt  main.cpp
02/: main.cpp
03/: CMakeLists.txt  main.cpp
04/: main.cpp
05/: CMakeLists.txt  main.cpp
07/: CMakeLists.txt  main.cpp
08/: CMakeLists.txt  main.cpp
src/01/: main.cpp
src/02/: CMakeLists.txt  main.cpp
src/03/: main.cpp
src/04/: CMakeLists.txt
src/05/: main.cpp
src/06/: CMakeLists.txt  main.cpp
src/07/: main.cpp
src/08/: main.cpp
src/09/: main.cpp
